# retry-aiohttp-session

./: .gitignore  LICENSE  README.md  README.ru.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_bot.py
src/retry_aiohttp_session/: __init__.py  session.py
tests/: test_session.py
